--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!-- <include src="посилання на необхідний файл"></include> -->
+  <include src="./partials/paralax.html"></include>
+
+  <script type="module" src="./js/paralax.js"></script>
   </body>
 </html>
